# trgen

./: .bashrc.inc  .gitignore  CMakeLists.txt
msghandl/interface/: CMakeLists.txt  imsg.h  imsghandl.h
msgs/include/: CMakeLists.txt
msgsrvc/interface/: imsgsvrc.h
server/: CMakeLists.txt
server/impl/: CMakeLists.txt  msgs.h  server.cpp  server.h  server_main.cpp
server/interface/: CMakeLists.txt  iserver.h  server_interface.h
server/test/: CMakeLists.txt  server_test.cpp
